--- a/charts/hbase/Chart.yaml
+++ b/charts/hbase/Chart.yaml
@@ -5,8 +5,8 @@ description: HBase is an open-source non-relational distributed database modeled
 home: https://hbase.apache.org/
 icon: http://hbase.apache.org/images/hbase_logo_with_orca.png
 maintainers:
-- email: cgiraldo@gradiant.org
-  name: cgiraldo
+- email: mr.hussnain.it@gmail.com
+  name: sabeeh
 name: hbase
 version: 0.1.7
 dependencies:
