--- a/charts/hdfs/values.yaml
+++ b/charts/hdfs/values.yaml
@@ -1,8 +1,8 @@
 # The base hadoop image to use for all components.
 # See this repo for image build details: https://github.com/Comcast/kube-yarn/tree/master/image
 image:
-  repository: gradiant/hdfs
-  tag: 2.7.7
+  repository: ghcr.io/fleeksoft/hbase/hdfs
+  tag: 3.3.3
   pullPolicy: IfNotPresent
 
 # Select antiAffinity as either hard or soft, default is 'soft'
