--- a/charts/hbase/templates/hbase-configmap.yaml
+++ b/charts/hbase/templates/hbase-configmap.yaml
@@ -30,18 +30,26 @@ data:
     _HBASE_OPTS="$HBASE_OPTS"
     # SET HBASE_OPTS with prometheus javaagent jmx exporter port
     export HBASE_OPTS="$_HBASE_OPTS -javaagent:/jmx-exporter/jmx_prometheus_javaagent.jar={{ .Values.prometheus.port }}:/etc/exporter/jmx-hbase-prometheus.yml"
-    {{- end }}    
+    {{- end }}
+
+    echo "starting $2";
     if [[ $2 == "master" ]]; then
+      #  wait up to 300 seconds for namenode
+      NAMENODE_URL={{- printf "http://%s-hadoop-hdfs-nn:9870/index.html" .Release.Name }}
+      echo "start pinging $NAMENODE_URL";
+      (while [[ $count -lt 60 && -z `curl -sf $NAMENODE_URL` ]]; do ((count=count+1)) ; echo "Waiting for $NAMENODE_URL" ; sleep 5; done && [[ $count -lt 60 ]])
+      [[ $? -ne 0 ]] && echo "Timeout waiting for namenode, exiting." && exit 1
+
       $HBASE_PREFIX/bin/hbase-daemon.sh start master
       {{- if .Values.prometheus.enabled }}
       # RESET HBASE_OPTS with thrift jmx exporter port
       export HBASE_OPTS="$_HBASE_OPTS -javaagent:/jmx-exporter/jmx_prometheus_javaagent.jar={{ .Values.prometheus.thriftPort }}:/etc/exporter/jmx-hbase-prometheus.yml"
-      {{- end }}   
+      {{- end }}
       $HBASE_PREFIX/bin/hbase-daemon.sh start thrift
     fi
     if [[ $2 == "regionserver" ]]; then
-      #  wait up to 30 seconds for masternode
-      (while [[ $count -lt 15 && -z `curl -sf http://{{ include "hbase.fullname" . }}-master:16010` ]]; do ((count=count+1)) ; echo "Waiting for {{ include "hbase.fullname" . }}-master" ; sleep 2; done && [[ $count -lt 15 ]])
+      #  wait up to 200 seconds for masternode
+      (while [[ $count -lt 100 && -z `curl -sf http://{{ include "hbase.fullname" . }}-master:16010` ]]; do ((count=count+1)) ; echo "Waiting for {{ include "hbase.fullname" . }}-master" ; sleep 2; done && [[ $count -lt 100 ]])
       [[ $? -ne 0 ]] && echo "Timeout waiting for hbase-master, exiting." && exit 1
       $HBASE_PREFIX/bin/hbase-daemon.sh start regionserver
     fi
@@ -81,7 +89,7 @@ data:
       {{- if not (index .Values.conf "hbaseSite" "hbase.rootdir")  }}
       <property>
         <name>hbase.rootdir</name>
-        <value>{{- printf "hdfs://%s-hdfs-namenode:8020/hbase" .Release.Name }}</value>
+        <value>{{- printf "hdfs://%s-hadoop-hdfs-nn:9000/hbase" .Release.Name }}</value>
       </property>
       {{- end }}
       {{- if index .Values.conf "hbaseSite" }}
