--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,4 +1,4 @@
-#repositoryID: XXXXXXX
+repositoryID: 577bdeb7-ba09-4834-8bfd-2d35f67815a8
 owners:
   - name: sabeeh
     email: mr.hussnain.it@gmail.com
